# beoarm_robogym_env

./: README.md  beoarm_robogym.md  client.py  test_beoarm.py  test_beobase.py
BeobotV3_arm/: test_scripts.py
BeobotV3_arm/config/: arm_controller_gains.yaml  default.rviz  ros_controllers.yaml
BeobotV3_arm/launch/: display.launch  gazebo_full.launch
BeobotV3_arm/meshes/: Caster Wheel.STL  Caster.STL  Velodine.STL  arm_base.STL  arm_link_1.STL  arm_link_2.STL  arm_link_3.STL  base_link.STL  hand.STL
BeobotV3_arm/urdf/: BeobotV3_arm.urdf  debug.sdf  frames.gv
BeobotV3_robot_server/: CMakeLists.txt  beobot_mobile.py  package.xml  setup.py  test_beobase.py
BeobotV3_robot_server/launch/: robot_server.launch
BeobotV3_robot_server/models/box100/: box100.sdf
BeobotV3_robot_server/scripts/: base_twist_command_handler.py  joint_trajectory_command_handler.py  robot_server.py
BeobotV3_robot_server/src/BeobotV3_robot_server/: ros_bridge.py
BeobotV3_robot_server/worlds/: test.world
beo_arm_m4/: CMakeLists.txt  package.xml
beo_arm_m4/launch/: display.launch  gazebo.launch
beo_arm_m4/urdf/: beo_arm_m4.csv  beo_arm_m4.urdf
beo_arm_m4_config/: ee_poses.p  ee_poses_plans.p  get_viable_ee_pose.py  package.xml  pushing.py  rand_valid_poses.p  test_controller.py
beo_arm_m4_config/config/: beo_arm_m4.srdf
beo_arm_m4_config/launch/: moveit.rviz
beoarm/: beoarm_ee_positioning.py
beoarm_robot_server/: package.xml
beoarm_robot_server/scripts/: robot_server.py
beoarm_robot_server/worlds/: test.world
beobase/: beobot_mobile.py
(+3 files in other folders)
